--- a/style/xs.css
+++ b/style/xs.css
@@ -65,25 +65,40 @@
     .primary-screen::before {
         content: '';
         position: absolute;
-        width: 1440px;
-        height: 692px;
-        left: calc(50% - 1440px/2);
-        top: 0px;
-        background: linear-gradient(82.66deg, rgba(37, 203, 255, 0.2632) 49.72%, rgba(201, 76, 244, 0.28) 75.27%);
-        filter: blur(262px);
+        width: 1000px;
+        height: 540px;
+        left: 50%;
+        margin-left: -500px;
+        top: 270px;
+        border-radius: 500px;
+        background: linear-gradient(152deg, rgba(37, 203, 255, 0.36) 35.82%, rgba(201, 76, 244, 0.38) 100%);
+        filter: blur(186.5px);
+        transform: rotate(90deg);
         z-index: 5;
     }
 
     .primary-screen::after {
         content: '';
         position: absolute;
+        width: 1900px;
+        height: 1200px;
+        left: 50%;
+        margin-left: -950px;
+        top: 0;
+        background: url('../images/tech-bg.png') no-repeat;
+        background-size: contain;
+        z-index: -1;
+    }
+
+    /* content: '';
+        position: absolute;
         width: 1440px;
         height: 692px;
         left: calc(50% - 1440px/2);
         top: 150px;
         background: url('../images/illustration_bg.svg');
-        z-index: -1;
-    }
+        z-index: -1; */
+
 
     .primary-screen-start-block {
         z-index: 7;
@@ -92,7 +107,7 @@
     .primary-screen-end-block {
         position: relative;
         z-index: 7;
-        margin-top: 60px;
+        margin-top: 90px;
     }
 
     .home-screen-end-block img {
@@ -237,7 +252,7 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 400;
-        font-size: 20px;
+        font-size: 16px;
         max-width: 330px;
         line-height: 150%;
         text-align: center;
@@ -656,11 +671,11 @@
 
 
     .primary-screen-end-block img.techno-primary-image {
-        width: 400px;
-        height: 380px;
+        width: 313px;
+        height: 362px;
         left: 50%;
-        margin-left: -214px;
-        top: -60px;
+        margin-left: -183px;
+        top: -31px;
         position: absolute;
         z-index: 5;
     }
@@ -718,10 +733,11 @@
     } */
 
     .fundation {
-        height: 457px;
+        height: auto;
         position: relative;
         z-index: 1;
-        margin-top: 120px;
+        margin-top: 210px;
+        margin-bottom: 110px;
     }
 
     .fundation::before {
@@ -946,11 +962,46 @@
         right: 0;
     }
 
-    .jumbo {
-        height: auto;
-        min-height: 475px;
+    .techno-bg-gradient {
         position: relative;
+    }
+
+    .techno-bg-gradient::before {
+        content: '';
+        position: absolute;
+        width: 400px;
+        height: 1800px;
+        left: 50%;
+        margin-left: -200px;
+        top: -250px;
+        border-radius: 1757px;
+        background: linear-gradient(152deg, rgba(37, 203, 255, 0.26) 35.82%, rgba(201, 76, 244, 0.28) 100%);
+        filter: blur(186.5px);
+        z-index: -3;
+    }
+
+
+    .jumbo {
         margin-bottom: 100px;
+    }
+
+    .jumbo .to-image {
+        position: relative !important;
+        width: 100% !important;
+        max-width: 315px !important;
+        height: 315px !important;
+        max-height: 315px !important;
+        margin: 0 auto;
+    }
+
+    .jss-box-right {
+        max-width: 100%;
+        margin-left: auto;
+    }
+
+    .jss-box-left {
+        max-width: 100%;
+        margin-right: auto;
     }
 
     .jumbo .title {
@@ -959,12 +1010,11 @@
         font-weight: 700;
         font-size: 30px;
         line-height: 120%;
-        text-align: center;
         background: linear-gradient(90.4deg, rgba(201, 76, 244, 0.3) -32.37%, rgba(37, 203, 255, 0.3) 93.03%), #FFFFFF;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
-        margin-top: 10px;
+        text-align: center;
     }
 
     .jumbo .text {
@@ -973,123 +1023,117 @@
         font-weight: 400;
         font-size: 16px;
         line-height: 150%;
-        text-align: center;
         background: linear-gradient(88.74deg, rgba(201, 76, 244, 0.3) -8.16%, rgba(37, 203, 255, 0.3) 58.17%), #FFFFFF;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
         text-shadow: 0px 1.42104px 11.3683px rgba(0, 0, 0, 0.25);
-        max-width: 320px;
-        margin: 0 auto;
+        text-align: center;
+        margin: 0 auto 50px;
     }
 
-    #second-jumbo.jumbo {
-        height: 570px;
-        position: relative;
-        margin-bottom: 100px;
-    }
-
-    #second-jumbo::before {
+    #first-jumbo::before {
         content: '';
         position: absolute;
-        width: 604px;
-        height: 375px;
+        width: 765px;
+        height: 310px;
         left: 0;
-        top: 0;
-        background: linear-gradient(81.95deg, rgba(37, 203, 255, 0.2632) 14.78%, rgba(76, 133, 244, 0.28) 48.04%);
-        filter: blur(186.5px);
-        transform: rotate(90deg);
-        z-index: -1;
-    }
-
-    #first-jumbo .to-image {
-        position: absolute;
-        width: 315px;
-        height: 315px;
-        left: 50%;
-        margin-left: -157px;
-        top: 155px;
-        background: linear-gradient(78.84deg, rgba(91, 9, 225, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
-        backdrop-filter: blur(5.44091px);
-        border-radius: 17.1818px;
+        top: 25px;
+        background: linear-gradient(88.7deg, rgba(37, 203, 255, 0.2) 28.76%, rgba(201, 76, 244, 0.2) 61.12%);
+        filter: blur(247px);
+        transform: matrix(-1, 0, 0, 1, 0, 0);
         z-index: -1;
     }
 
     #first-jumbo img {
         position: relative;
-        width: 423px;
-        height: 387.08px;
-        left: -57px;
-        top: -45px;
+        width: 348px;
+        height: 348px;
+        left: -20px;
+        top: -35px;
     }
 
     #first-jumbo .gradient-circle {
         position: absolute;
-        width: 314.87px;
-        height: 314.43px;
-        left: calc(50% - 314.87px/2 - 0.35px);
-        top: calc(50% - 314.43px/2 + 1.07px);
-        background: rgba(76, 93, 244, 0.3);
-        filter: blur(58.3122px);
+        width: 330px;
+        height: 330px;
+        left: 0;
+        top: calc(50% - 330px/2 - 0.5px);
+        background: #C94CF4;
+        opacity: 0.5;
+        filter: blur(102px);
     }
+
+    #first-jumbo .gradient-circle-sm {
+        position: absolute;
+        width: 0px;
+        height: 0px;
+        /* left: calc(50% - 330px/2 - 0.61px);
+        top: calc(50% - 330px/2 + 1.87px); */
+        background: rgba(76, 93, 244, 0.3);
+        filter: blur(102px);
+    }
+
+    #second-jumbo .text {
+        margin-bottom: 70px;
+    }
+
 
     #second-jumbo::before {
         content: '';
         position: absolute;
-        width: 400px;
-        height: 570px;
+        width: 765px;
+        height: 310px;
         left: 0;
-        top: 0;
-        background: linear-gradient(81.95deg, rgba(37, 203, 255, 0.2632) 14.78%, rgba(76, 133, 244, 0.28) 48.04%);
-        filter: blur(186.5px);
-        z-index: -1;
-    }
-
-    #second-jumbo .to-image {
-        position: absolute;
-        width: 315px;
-        height: 315px;
-        left: 50%;
-        margin-left: -157px;
-        top: 260px;
-        background: linear-gradient(78.84deg, rgba(91, 9, 225, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
-        backdrop-filter: blur(5.44091px);
-        border-radius: 17.1818px;
+        top: 25px;
+        background: linear-gradient(88.7deg, rgba(37, 203, 255, 0.2) 28.76%, rgba(201, 76, 244, 0.2) 61.12%);
+        filter: blur(247px);
+        transform: matrix(-1, 0, 0, 1, 0, 0);
         z-index: -1;
     }
 
     #second-jumbo img {
-        position: relative;
-        width: 296px;
-        height: 381.08px;
-        left: 19px;
-        top: -65px;
+        position: absolute;
+        width: auto;
+        height: 359px;
+        top: -43px;
+        right: 0px;
     }
 
     #second-jumbo .gradient-circle {
         position: absolute;
-        position: absolute;
-        width: 295.88px;
-        height: 296.3px;
-        left: calc(50% - 295.88px/2 + 9.44px);
-        top: calc(50% - 296.3px/2 + 10.42px);
+        width: 300px;
+        height: 300px;
+        top: 0px;
+        left: 0px;
+        border-radius: 300px;
         background: #0997FF;
-        filter: blur(54.7947px);
+        filter: blur(55px);
     }
 
-    #third-jumbo.jumbo {
-        height: 510px;
-        position: relative;
-        margin-bottom: 100px;
+    #second-jumbo .gradient-circle-sm {
+        position: absolute;
+        width: 100px;
+        height: 100px;
+        background: rgba(133, 203, 255, 0.77);
+        filter: blur(29.285228729248047px);
+        top: -22px;
+        left: 132px;
+        z-index: 2;
     }
+
+    #third-jumbo {
+        margin-bottom: 145px;
+    }
+
 
     #third-jumbo::before {
         content: '';
         position: absolute;
-        width: 1440px;
-        height: 509.64px;
+        width: 765px;
+        height: 310px;
         left: 0;
-        top: 126.75px;
+        top: 25px;
         background: linear-gradient(88.7deg, rgba(37, 203, 255, 0.2) 28.76%, rgba(201, 76, 244, 0.2) 61.12%);
         filter: blur(247px);
         transform: matrix(-1, 0, 0, 1, 0, 0);
@@ -1097,198 +1141,186 @@
     }
 
     #third-jumbo .to-image {
-        position: absolute;
-        width: 315px;
-        height: 315px;
-        left: 50%;
-        margin-left: -157px;
-        top: 200px;
         background: linear-gradient(78.84deg, rgba(225, 9, 165, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
-        backdrop-filter: blur(5.44091px);
-        border-radius: 17.1818px;
+        backdrop-filter: blur(9.5px);
+        border-radius: 30px;
         z-index: -1;
+    }
+
+    #third-jumbo .text {
+        margin-bottom: 90px;
     }
 
     #third-jumbo img {
         position: relative;
-        width: 333.33px;
-        height: 352.23px;
+        width: 315px;
+        height: 371px;
         left: 0px;
-        top: -37.23px;
+        top: -57px;
     }
 
     #third-jumbo .gradient-circle {
         position: absolute;
-        width: 315.44px;
+        width: 315px;
         height: 315px;
-        left: calc(50% - 315.44px/2 + 0.22px);
-        top: calc(50% - 315px/2 + 12.03px);
+        left: calc(50% - 315px/2 + 0.39px);
+        top: calc(50% - 315px/2 + 21px);
         background: #0989FF;
-        filter: blur(58.4182px);
+        filter: blur(102px);
     }
 
     #third-jumbo .gradient-circle-sm {
         position: absolute;
-        width: 315.44px;
+        width: 315px;
         height: 315px;
-        left: calc(50% - 315.44px/2 - 0.35px);
-        top: calc(50% - 315px/2 + 1.07px);
+        left: calc(50% - 315px/2 + 0.39px);
+        top: calc(50% - 315px/2 + 21px);
         background: rgba(76, 93, 244, 0.3);
-        filter: blur(58.4182px);
+        filter: blur(102px);
     }
 
-    #fourth-jumbo.jumbo {
-        height: 570px;
-        position: relative;
-        margin-bottom: 100px;
+    #fourth-jumbo {
+        margin-bottom: 150px;
     }
 
     #fourth-jumbo::before {
         content: '';
         position: absolute;
-        width: 130px;
-        height: 600px;
-        left: 0px;
-        top: 0px;
-        background: linear-gradient(81.95deg, rgba(255, 37, 233, 0.7332) 14.78%, rgba(85, 0, 124, 0.78) 48.04%);
+        border-radius: 400px;
+        background: linear-gradient(151deg, rgba(255, 37, 233, 0.73) 0%, rgba(85, 0, 124, 0.78) 100%);
         filter: blur(186.5px);
+        width: 700px;
+        height: 375px;
+        transform: rotate(90deg);
+        flex-shrink: 0;
+        left: 50%;
+        margin-left: -350px;
+        top: 280px;
         z-index: -1;
     }
 
     #fourth-jumbo .to-image {
-        position: absolute;
-        width: 315px;
-        height: 315px;
-        left: 50%;
-        margin-left: -157px;
-        top: 180px;
         background: linear-gradient(78.84deg, rgba(225, 9, 165, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
-        backdrop-filter: blur(5.44091px);
-        border-radius: 17.1818px;
+        backdrop-filter: blur(9.5px);
+        border-radius: 30px;
         z-index: -1;
     }
 
     #fourth-jumbo img {
         position: relative;
-        width: 420.19px;
-        height: 386.15px;
-        left: -48px;
-        top: -42px;
-        filter: drop-shadow(0px 0px 24.0545px #C94CF4);
+        width: 360px;
+        height: 340px;
+        left: -22px;
+        top: -13px;
     }
 
     #fourth-jumbo .gradient-circle {
         position: absolute;
-        width: 315.44px;
+        width: 315px;
         height: 315px;
-        left: calc(50% - 315.44px/2 - 0.35px);
-        top: calc(50% - 315px/2 + 1.07px);
-        background: rgba(76, 93, 244, 0.3);
-        filter: blur(58.4182px);
+        left: calc(50% - 315px/2 + 0.39px);
+        top: calc(50% - 315px/2 + 21px);
+        border-radius: 315.441px;
+        background: rgba(76, 93, 244, 0.30);
+        filter: blur(58.41818618774414px);
     }
 
     #fourth-jumbo .gradient-circle-sm {
         position: absolute;
-        width: 315.44px;
+        width: 315px;
         height: 315px;
-        left: calc(50% - 315.44px/2 - 0.35px);
-        top: calc(50% - 315px/2 - 0.29px);
+        left: calc(50% - 315px/2 + 0.39px);
+        top: calc(50% - 315px/2 + 21px);
+        border-radius: 315.441px;
         background: #C94CF4;
-        filter: blur(58.4182px);
+        filter: blur(58.41818618774414px);
     }
 
     #fourth-jumbo .gradient-circle-left {
         position: absolute;
-        width: 143px;
-        height: 144px;
-        left: 46px;
-        top: 146.5px;
+        width: 100px;
+        height: 100px;
+        left: 26px;
+        top: 112px;
         background: rgba(238, 133, 255, 0.77);
         mix-blend-mode: hard-light;
         filter: blur(27px);
     }
 
-    #fifth-jumbo.jumbo {
-        height: 520px;
-        position: relative;
-        margin-bottom: 5px;
+    #fourth-jumbo .gradient-circle-center {
+        position: absolute;
+        width: 100px;
+        height: 100px px;
+        left: 158px;
+        top: 40px;
+        background: rgba(238, 133, 255, 0.77);
+        mix-blend-mode: hard-light;
+        filter: blur(27px);
+    }
+
+    #fourth-jumbo .gradient-circle-right {
+        position: absolute;
+        width: 100px;
+        height: 100px;
+        left: 146px;
+        top: 208px;
+        background: rgba(238, 133, 255, 0.77);
+        mix-blend-mode: hard-light;
+        filter: blur(27px);
+    }
+
+    #fifth-jumbo .text {
+        margin-bottom: 90px;
     }
 
     #fifth-jumbo::before {
         content: '';
         position: absolute;
-        width: 325px;
-        height: 375px;
-        left: 0px;
-        top: 0px;
-        background: linear-gradient(79.36deg, rgba(210, 51, 250, 0.78) 32.15%, rgba(0, 47, 211, 0.7332) 64.88%);
-        filter: blur(186.5px);
-        transform: rotate(90deg);
+        width: 765px;
+        height: 310px;
+        left: 0;
+        top: 25px;
+        background: linear-gradient(88.7deg, rgba(37, 203, 255, 0.2) 28.76%, rgba(201, 76, 244, 0.2) 61.12%);
+        filter: blur(247px);
+        transform: matrix(-1, 0, 0, 1, 0, 0);
         z-index: -1;
-    }
-
-    #fourth-jumbo .gradient-circle-center {
-        position: absolute;
-        width: 81.9px;
-        height: 82.47px;
-        left: 148.91px;
-        top: 35.22px;
-        background: rgba(238, 133, 255, 0.77);
-        mix-blend-mode: hard-light;
-        filter: blur(15.4636px);
-    }
-
-    #fourth-jumbo .gradient-circle-right {
-        position: absolute;
-        width: 81.9px;
-        height: 82.47px;
-        left: 148.91px;
-        top: 195.01px;
-        background: rgba(238, 133, 255, 0.77);
-        mix-blend-mode: hard-light;
-        filter: blur(15.4636px);
     }
 
     #fifth-jumbo .to-image {
-        position: absolute;
-        width: 315px;
-        height: 315px;
-        left: 50%;
-        margin-left: -157px;
-        top: 165px;
-        background: linear-gradient(78.84deg, rgba(91, 9, 225, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
-        backdrop-filter: blur(5.44091px);
-        border-radius: 17.1818px;
+        background: linear-gradient(78.84deg, rgba(225, 9, 165, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
+        backdrop-filter: blur(9.5px);
+        border-radius: 30px;
         z-index: -1;
-    }
-
-    #fifth-jumbo .gradient-circle {
-        position: absolute;
-        width: 315.44px;
-        height: 315px;
-        left: calc(50% - 315.44px/2 - 0.35px);
-        top: calc(50% - 315px/2 + 1.07px);
-        background: rgba(76, 93, 244, 0.3);
-        filter: blur(58.4182px);
-    }
-
-    #fifth-jumbo .gradient-circle-sm {
-        position: absolute;
-        width: 315.44px;
-        height: 315px;
-        left: calc(50% - 315.44px/2 + 0.22px);
-        top: calc(50% - 315px/2 + 12.03px);
-        background: #0989FF;
-        filter: blur(58.4182px);
     }
 
     #fifth-jumbo img {
         position: relative;
+        width: 315px;
+        height: 371px;
+        left: 0px;
+        top: -55px;
+    }
+
+    #fifth-jumbo .gradient-circle {
         position: absolute;
         width: 315px;
-        height: 342.49px;
-        left: 0px;
-        top: -27.49px;
+        height: 315px;
+        left: calc(50% - 315px/2 + 0.39px);
+        top: calc(50% - 315px/2 + 21px);
+        border-radius: 315.441px;
+        background: #0989FF;
+        filter: blur(58.41817855834961px);
+    }
+
+    #fifth-jumbo .gradient-circle-sm {
+        position: absolute;
+        width: 315px;
+        height: 315px;
+        left: calc(50% - 315px/2 + 0.39px);
+        top: calc(50% - 315px/2 + 21px);
+        border-radius: 315.441px;
+        background: rgba(76, 93, 244, 0.30);
+        filter: blur(58.41817855834961px);
     }
 
     #techno-form {
@@ -1303,7 +1335,7 @@
         position: absolute;
         width: 1055px;
         height: 550px;
-        left: 0px;
+        left: -100px;
         top: 0px;
         background: rgba(76, 93, 244, 0.2);
         filter: blur(150px);
@@ -1313,13 +1345,13 @@
     #techno-form::after {
         content: '';
         position: absolute;
-        width: 460px;
-        height: 646px;
+        width: 300px;
+        height: 300px;
         left: 50%;
-        margin-left: -205px;
-        top: -47px;
+        margin-left: -150px;
+        top: 110px;
         background: url('../images/ask.svg') no-repeat;
-        background-size: cover;
+        background-size: contain;
         transform: rotate(0deg);
         z-index: -1;
     }
@@ -1335,11 +1367,12 @@
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
+        margin-bottom: 5px;
     }
 
     .subscribe-box .text {
         max-width: 300px;
-        margin: 0 auto;
+        margin: 0 auto 25px;
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 400;
@@ -1393,7 +1426,7 @@
         color: #FFFFFF;
         border: 0;
         padding: 16px 52px;
-        margin: 45px auto 0;
+        margin: 20px auto 0;
         width: 135px;
         height: 50px;
     }
