--- a/style/xs.css
+++ b/style/xs.css
@@ -322,7 +322,7 @@
         position: relative;
         height: auto;
         z-index: 8;
-        margin: 0 0 100px;
+        margin: 130px 0 100px;
         padding: 0;
     }
 
